--- a/Clase 5/proyecto/client/index.html
+++ b/Clase 5/proyecto/client/index.html
@@ -9,7 +9,10 @@
 	<body>
 		<h2>Obtiene la cotización del dolar</h2>
 
+		Seleccione la fecha
 		<input type="date" id="dtFecha" />
+
+		<div id="resultado"></div>
 
 		<script>
 			/**
@@ -29,7 +32,7 @@
         return outputDate;
       }
       */
-
+			/*
 			function getUsd(date) {
 				const xhr = new XMLHttpRequest();
 				xhr.responseType = "json";
@@ -41,6 +44,22 @@
         xhr.send();
         xhr.addEventListener('load', () => {
           console.log(xhr.response);
+        });
+			}
+			*/
+			function getUsd(date) {
+				
+				const resultado = document.querySelector('#resultado');
+				
+				const xhr = new XMLHttpRequest();
+				xhr.responseType = "json";
+        xhr.open("GET", `http://localhost:3000/diaria/${date}`);
+        xhr.send();
+
+				resultado.innerHTML = "Cargando...";
+
+        xhr.addEventListener('load', () => {
+					resultado.innerHTML = "Valor del dolar a esa fecha: $"+xhr.response.v;
         });
 			}
 
