--- a/Clase 5/proyecto/client/index.html
+++ b/Clase 5/proyecto/client/index.html
@@ -53,7 +53,7 @@
 				
 				const xhr = new XMLHttpRequest();
 				xhr.responseType = "json";
-        xhr.open("GET", `http://localhost:3000/diaria/${date}`);
+        xhr.open("GET", `http://localhost:3000/usd/diaria/${date}`);
         xhr.send();
 
 				resultado.innerHTML = "Cargando...";
