--- a/Clase9.html
+++ b/Clase9.html
@@ -1,12 +1,15 @@
 Typescript base + Decoradores <br />
  <br />
-Links a Angular <br />
+Links <br />
+https://create-react-app.dev/docs/adding-typescript/ <br>
+https://es.vuejs.org/v2/guide/typescript.html <br>
 https://github.com/angular/angular/blob/8ce1ac603a9936784225c28f5526226d208eeb27/packages/core/src/util/decorators.ts#L54 <br />
 https://github.com/angular/angular/blob/master/packages/core/src/metadata/directives.ts#L564 <br />
+https://www.typescriptlang.org/docs/handbook/intro.html <br>
  <br />
 INICIAR EL PROYECTO <br />
 1. npm init -y <br />
-2. npm i webpack <br />
+2. npm i -D webpack <br />
 3. crear script "init":"webpack init" <br />
 4. npm run init <br />
 5. SI a todas las dependencias necesarias. <br />
