Patron modulo :: fin

--- a/Clase 10/index.html
+++ b/Clase 10/index.html
@@ -8,6 +8,14 @@
 </head>
 <body>
 
-  <script src="Module.js"></script>
+  <script src="Calculator.js"></script>
+  <script>
+
+  Calculator.on('suma', e => {
+    console.log('Sumando...');
+    console.log(e);
+  })
+
+  </script>
 </body>
 </html>
