--- a/Clase 10/index.html
+++ b/Clase 10/index.html
@@ -9,13 +9,7 @@
 <body>
 
   <script src="Calculator.js"></script>
-  <script>
+  <script src="HttpClient.js"></script>
 
-  Calculator.on('suma', e => {
-    console.log('Sumando...');
-    console.log(e);
-  })
-
-  </script>
 </body>
 </html>
